<resources>
    <string name="app_name">CameraIPModule</string>
    <string name="path">/sdcard/test0.mp4</string>
    <string name="camera_user">username</string>
    <string name="version_code">version number</string>
    <string name="soft_name">software name</string>
    <string name="camera_pwd">password</string>
    <string name="str_ok"> OK </string>
    <string name="str_cancel"> cancel </string>
    <string name="exit_alert">Confirm exit?</string>
    <string name="password">Password:</string>
    <string name="showpwd">Show password</string>
    <string name="connected">connected</string>
    <string name="pwd_no_empty">Password cannot be empty</string>
    <string name="camera_port">Port</string>
    <string name="send_error">Send failed</string>
    <string name="recv_error">Receive failed</string>
    <string name="unknow_error">Unknown error</string>
    <string name="disclaimer_conent">Shenzhen Oujiete Technology Co., Ltd. reserves the ownership of this software, piracy is reserved. </string>
    <string name="version_conent">V 0.0.0.1</string>
    <string name="contact_me">"Company Website: http://www.object-camera.com Customer Service Email: support@object-camera.com"</string>
    <string name="more_about_disclaimer">Software Declaration</string>
    <string name="more_about_version"> version information </string>
    <string name="more_about_contact">Contact Us</string>
    <string name="camera_not_online"> camera disconnected, please reconnect to the home page </string>
    <string name="app_running"> is running </string>
    <string name="sensorlist_addnewdevice">Add new device</string>
    <string name="sensor_list_sensor">sensor</string>
    <string name="sensorlist_havedevice">The device you have added</string>
    <string name="add_sensor_infrerad_desc"> Infrared uses the thermal effect of infrared radiation to detect whether someone or an animal has passed. </string>
    <string name="add_sensor_gas_desc"> The sense of gas is detected by a gas sensor to detect whether the combustible gas in the surrounding environment exceeds a safe value. </string>
    <string name="add_sensor_smoke_desc">Smoke Sense is to prevent fire by monitoring the smoke concentration. </string>
    <string name="add_sensor_control_desc"> wireless remote control is a device used to remotely control the machine. </string>
    <string name="add_sensor_siren_desc"> alarm siren can receive remote control, wireless sensor, wireless infrared sensor alarm signal </string>
    <string name="add_sensor_door_desc"> The door magnet is used to detect if doors, windows, drawers, etc. have been illegally opened or moved. </string>
    <string name="start_codding_gas_desc"> press the button on the side, red indicator light flashes </string>
    <string name="start_codding_smoke_desc"> press the button on the side, there is a voice prompt to complete the code </string>
    <string name="start_codding_infrerad_desc"> hand swings in front of the infrared </string>
    <string name="start_codding_siren_desc"> switch on siren power </string>
    <string name="sensor_type_door"> door magnet </string>
    <string name="sensor_type_infrared">Infrared</string>
    <string name="sensor_type_smoke"> smoke </string>
    <string name="sensor_type_siren"> siren </string>
    <string name="sensor_type_gas"> gas sense </string>
    <string name="sensor_type_remote">remote controller</string>
    <string name="sensor_type_camera"> camera </string>
    <string name="sensor_type_curtain"> curtain </string>
    <string name="str_version">version</string>
    <string name="pppp_status_initialing"> connected, initializing </string>
    <string name="delete_camera"> delete </string>
    <string name="list_option">operation</string>
    <string name="del_alert">Confirm delete?</string>
    <string name="str_search">LAN search</string>
    <string name="check_loction">View video </string>
    <string name="str_add">Add</string>
    <string name="str_about">About</string>
    <string name="connecting">Connecting...</string>
    <string name="init_network_error">Initialize network failure</string>
    <string name="connect_failed"> connection failed </string>
    <string name="edit">Modify</string>
    <string name="setting">settings</string>
    <string name="string_about">About us</string>
    <string name="camera_type">camera type</string>
    <string name="device_id_name">ID:</string>
    <string name="device_type_name"> type:</string>
    <string name="device_status_name"> Status: </string>
    <string name="pppp_status_unknown">Unknown State</string>
    <string name="pppp_status_connecting">Connecting</string>
    <string name="pppp_status_online">Online</string>
    <string name="pppp_status_disconnect"> broken </string>
    <string name="pppp_status_connect_failed"> connection failed </string>
    <string name="pppp_status_pwd_error">password error</string>
    <string name="pppp_status_invalid_id"> invalid ID number </string>
    <string name="pppp_dev_type_unknown">Unknown type</string>
    <string name="device_not_on_line"> camera is not online </string>
    <string name="pppp_mode">Mode:</string>
    <string name="pppp_mode_p2p_normal">p2p connection</string>
    <string name="pppp_mode_p2p_relay">p2p forwarding</string>
    <string name="pppp_mode_unknown">Unknown</string>
    <string name="pppp_status_connect_timeout"> connection timeout </string>
    <string name="main_tap_here_add_vidicon">Click here to add the camera </string>
    <string name="back"> returns </string>
    <string name="done"> complete </string>
    <string name="main_select_all">select all</string>
    <string name="main_select_reverse">Inverse </string>
    <string name="main_edit">edit</string>
    <string name="main_check">view</string>
    <string name="main_vidicon">Camera</string>
    <string name="main_alarm_event">Alarm Events</string>
    <string name="main_pic">image</string>
    <string name="main_vid">Video </string>
    <string name="main_remote">Remote</string>
    <string name="main_phone">mobile phone</string>
    <string name="main_setting_prompt">Camera is offline and cannot be set </string>
    <string name="exit"> exit </string>
    <string name="main_alarm">Alarm </string>
    <string name="main_more">more </string>
    <string name="main_plea_addcam">Please add camera </string>
    <string name="main_not_administrator">This user is not an administrator</string>
    <string name="main_show_back"> Press again to exit the program! </string>
    <string name="vga"> Pu Qing </string>
    <string name="qvga"> HD </string>
    <string name="mobile">mobile phone </string>
    <string name="min">lowest </string>
    <string name="low">low</string>
    <string name="middle"> in </string>
    <string name="high">high</string>
    <string name="max">highest</string>
    <string name="right"> right </string>
    <string name="left"> leftward </string>
    <string name="up">up</string>
    <string name="down"> down </string>
    <string name="preset_set"> preset settings </string>
    <string name="preset_call"> preset call </string>
    <string name="input_camera_name">Please enter the camera name</string>
    <string name="add_camera">Add Camera</string>
    <string name="edit_camera"> modify the camera </string>
    <string name="camera_name">name</string>
    <string name="camera_addr"> IP address </string>
    <string name="input_camera_addr">Please enter the IP address</string>
    <string name="input_camera_port">Please enter the port</string>
    <string name="input_camera_user">Please enter the username </string>
    <string name="input_camera_id">Please enter device ID</string>
    <string name="camera_id"> device ID</string>
    <string name="scan_cameraid">scan bar code</string>
    <string name="scan_cameraid_fail"> scan failed, please rescan </string>
    <string name="add_search_result">search results</string>
    <string name="add_search_no"> did not search, please try again ...</string>
    <string name="add_twodimensioncode">Starting QR code program...</string>
    <string name="searching_tip">Searching, please wait...</string>
    <string name="search_camera">search camera </string>
    <string name="refresh">refresh</string>
    <string name="setting_camera"> camera settings </string>
    <string name="setting_wifi"> Wifi settings </string>
    <string name="setting_user"> user settings </string>
    <string name="setting_ftp">Ftp settings</string>
    <string name="setting_alerm"> alarm settings </string>
    <string name="setting_time"> device clock settings </string>
    <string name="setting_mail">Mail Settings</string>
    <string name="setting_sdcard"> SD card settings </string>
    <string name="datetime_setting"> time setting </string>
    <string name="mail_setting">Mail Settings</string>
    <string name="ftp_setting">Ftp settings</string>
    <string name="alerm_setting"> alarm settings </string>
    <string name="sdcard_getparams">Getting SDCard information...</string>
    <string name="sdcard_total"> SD card total capacity (M): </string>
    <string name="sdcard_remain"> SD card remaining amount (M): </string>
    <string name="sdcard_state">SD card status:</string>
    <string name="sdcard_format">Format</string>
    <string name="sdcard_inserted">SD card has been inserted</string>
    <string name="sdcard_no_inserted">No SD card inserted</string>
    <string name="sdcard_video">video...</string>
    <string name="sdcard_file_error">File System Error</string>
    <string name="sdcard_isformatting">SD card is being formatted...</string>
    <string name="sdcard_status_info">No card or need to be formatted</string>
    <string name="sdcard_coverage">video coverage:</string>
    <string name="sdcard_recordlength">recording duration (minutes):</string>
    <string name="sdcard_recordtime">Timing video:</string>
    <string name="sdcard_schedule">SD card settings</string>
    <string name="sdcard_range">range 5-180</string>
    <string name="sdcard_set_failed">SD card setup failed</string>
    <string name="sdcard_set_success"> SD card set up successfully </string>
    <string name="sdcard_formatsd"> formatting SD card takes 30 seconds, is it formatted?</string>
    <string name="sdcard_no_inserted_format_faile"> No SD card inserted, formatting failed!</string>
    <string name="exit_sd_alert"> Clicking on the program again will run in the background, pressing the "OK" button to close the program. </string>
    <string name="wifi">Wifi</string>
    <string name="wifi_checkmode">Verification type:</string>
    <string name="wifi_manager">Manage WiFi Network</string>
    <string name="wifi_signal_strong"> signal strength:</string>
    <string name="wifi_safe">Security:</string>
    <string name="wifi_no_safe">None</string>
    <string name="wifi_set_failed">WiFi setting failed</string>
    <string name="wifi_set_success"> WiFi setup is successful, camera is restarting...</string>
    <string name="wifi_not_connected"> not connected </string>
    <string name="wifi_scanning">WiFi is scanning, please wait...</string>
    <string name="wifi_scan_failed">WiFi scan failed</string>
    <string name="wifi_getparams"> is getting WiFi information...</string>
    <string name="wifi_getparams_failed"> Failed to get WiFi information </string>
    <string name="wifi_notchange"> WiFi has not changed, do not need to set </string>
    <string name="wifi_pwd_toolong"> password can not exceed 128 bits </string>
    <string name="user_admin">administrator</string>
    <string name="user_operator">operator</string>
    <string name="user_visitor">visitors</string>
    <string name="user_setting">user settings</string>
    <string name="user_set_failed"> user settings failed </string>
    <string name="user_set_success"> user settings is successful, the camera is restarting </string>
    <string name="user_name_no_empty"> username cannot be empty</string>
    <string name="user_name">username:</string>
</resources>