<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ecf0f1"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:visibility="gone"
        android:background="#ecf0f1"
        android:gravity="center_horizontal"
        android:id="@+id/camera_play_resolution_jpeg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:layout_marginRight="16dp"
            android:id="@+id/camera_play_resolution_jpeg_qvga"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:text="QVGA"/>
        <Button
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:layout_marginLeft="16dp"
            android:id="@+id/camera_play_resolution_jpeg_vga"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:text="VGA"/>
    </LinearLayout>
    <HorizontalScrollView
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:scrollbars="none">
    <LinearLayout
        android:background="#ecf0f1"
        android:id="@+id/camera_play_resolution_h264"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_margin="4dp"
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:id="@+id/camera_play_resolution_h264_qvga"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="mobile" />

        <Button
            android:layout_margin="4dp"
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:id="@+id/camera_play_resolution_h264_vga"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/min"/>

        <Button
            android:layout_margin="4dp"
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:id="@+id/camera_play_resolution_h264_720p"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/low"/>

        <Button
            android:layout_margin="4dp"
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:id="@+id/camera_play_resolution_h264_middle"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/middle"/>

        <Button
            android:layout_margin="4dp"
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:id="@+id/camera_play_resolution_h264_high"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/high"/>

        <Button
            android:layout_margin="4dp"
            android:textColor="@color/btn_text_colorc"
            android:background="@drawable/btn_background_color"
            android:id="@+id/ptz_resolution_h264_max"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:text="@string/max"/>
    </LinearLayout>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/ptz_resolution_close"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_clear_black_24dp"
        android:layout_marginTop="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        />
</LinearLayout>